--- a/www/css/style.css
+++ b/www/css/style.css
@@ -602,12 +602,21 @@ input[readonly] {
 	width: 100%;
 }
 
-.stage {
+#stage {
+	position: relative;
 	padding-top: 10px;
 	margin: 0 20px;
 }
 
-.lite-ui .stage {
+.form-layer {
+	position: absolute;
+	top: 0;
+	bottom: 0;
+	left: 0;
+	right: 0;
+}
+
+.lite-ui #stage {
 	margin: 30px;
 }
 
