--- a/www/css/style.css
+++ b/www/css/style.css
@@ -608,12 +608,13 @@ input[readonly] {
 	margin: 0 20px;
 }
 
-.form-layer {
-	position: absolute;
+.form-layer-modal {
+	position: fixed;
 	top: 0;
 	bottom: 0;
 	left: 0;
 	right: 0;
+	background-color: #00112280;
 }
 
 .lite-ui #stage {
@@ -1127,6 +1128,14 @@ input[readonly] {
 .form-full {
 	margin-bottom: 7px;
 	max-width: 1124px;
+}
+
+.form-layer-modal .form-full {
+	margin: 30px auto;
+	padding: 30px;
+	background-color: white;
+	border: 2px solid var(--BRAND_COLOR);
+	border-radius: 13px;
 }
 
 .form-footer {
