records deletion restriction

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -136,9 +136,14 @@ input::placeholder {
 	color: #aaa;
 }
 
-
 img {
 	vertical-align: middle;
+}
+
+.disabled .field-boolean,
+.restricted {
+	opacity: 0.3;
+	pointer-events: none;
 }
 
 .left-bar a:link {
