--- a/www/css/debug-style.css
+++ b/www/css/debug-style.css
@@ -174,6 +174,10 @@
 	background: #567 !important;
 }
 
+.blocked-layer .admin-controll {
+	display: none;
+}
+
 .debug-panel-panel {
 	position: fixed;
 	top: 130px;
