--- a/www/css/style.css
+++ b/www/css/style.css
@@ -195,9 +195,8 @@ img {
 }
 
 .clickable:active {
-	-webkit-box-shadow: inset 0px 4px 12px 0px rgba(44, 0, 0, 0.75);
-	-moz-box-shadow: inset 0px 4px 12px 0px rgba(44, 0, 0, 0.75);
-	box-shadow: inset 0px 4px 12px 0px rgba(44, 0, 0, 0.75);
+	-webkit-box-shadow: inset 0px 2px 8px -2px rgba(0, 0, 48, 0.51);
+	box-shadow: inset 0px 2px 8px -2px rgba(0, 0, 48, 0.51);
 }
 
 .drag {
@@ -586,6 +585,7 @@ input[readonly] {
 	border-radius: 4px;
 	border: 1px solid var(--BRAND_COLOR_DARK);
 	color: var(--BRAND_COLOR_LIGHT);
+	padding: 3px 10px;
 	padding: 3px 10px;
 }
 
