avoid to use locationToHash for navigation. Because it moves stage to root level

--- a/www/css/debug-style.css
+++ b/www/css/debug-style.css
@@ -255,7 +255,8 @@
 
 .left-bar-admin-button {
 	position: absolute;
-	left: 0
+	left: 0;
+	top: 12px;
 }
 
 .left-bar-empty-section {
@@ -275,4 +276,11 @@
 
 .field-container-id-299 .admin-form-wrap {
 	bottom: 32px;
+}
+
+.form-node-9 .field-container-id-752,
+.form-node-12 .field-container-id-755,
+.form-node-4 .field-container-id-13,
+.form-node-6 .field-container-id-754 {
+	color: #ccc;
 }
