--- a/www/css/style.css
+++ b/www/css/style.css
@@ -154,7 +154,7 @@ img {
 	text-decoration: none;
 }
 
-.unclickable {
+.not-clickable {
 	vertical-align: middle;
 	pointer-events: none;
 }
@@ -210,7 +210,7 @@ img {
 	cursor: grabbing;
 }
 
-.toolbtn {
+.tool-btn {
 	padding: 3px 2px;
 	border-radius: 3px;
 	-webkit-box-shadow: none;
@@ -218,7 +218,7 @@ img {
 	box-shadow: none;
 }
 
-.halfvisible {
+.half-visible {
 	opacity: 0.5;
 }
 
@@ -1241,7 +1241,7 @@ input[readonly] {
 	border-radius: 6px;
 }
 
-.list-search .toolbtn {
+.list-search .tool-btn {
 	display: inline-block;
 	height: 100%;
 }
@@ -1289,7 +1289,7 @@ input[readonly] {
 	margin: 50px;
 }
 
-.list-emty {
+.list-empty {
 	color: #ccc;
 	text-align: center;
 	font-size: 140%;
