--- a/www/css/style.css
+++ b/www/css/style.css
@@ -195,7 +195,6 @@ img {
 }
 
 .clickable:active {
-	-webkit-box-shadow: inset 0px 2px 8px -2px rgba(0, 0, 48, 0.51);
 	box-shadow: inset 0px 2px 8px -2px rgba(0, 0, 48, 0.51);
 }
 
@@ -213,8 +212,6 @@ img {
 .tool-btn {
 	padding: 3px 2px;
 	border-radius: 3px;
-	-webkit-box-shadow: none;
-	-moz-box-shadow: none;
 	box-shadow: none;
 }
 
@@ -223,7 +220,7 @@ img {
 }
 
 .in {
-	/*bootstrap popowers attached directly to body fix*/
+	/*bootstrap popovers attached directly to body fix*/
 	display: none;
 }
 
@@ -252,7 +249,6 @@ img {
 }
 
 .checkboxM label:after {
-	-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
 	filter: alpha(opacity=0);
 	opacity: 0;
 	content: "";
@@ -265,28 +261,15 @@ img {
 	border: 3px solid #333;
 	border-top: none;
 	border-right: none;
-
-	-webkit-transform: rotate(-45deg);
-	-moz-transform: rotate(-45deg);
-	-o-transform: rotate(-45deg);
-	-ms-transform: rotate(-45deg);
 	transform: rotate(-45deg);
 }
 
 .checkboxM label:hover:not(.disabled)::after {
-	-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=30)";
-	filter: alpha(opacity=30);
 	opacity: 0.3;
 }
 
 .checkboxM input[type=checkbox]:checked+label:after {
-	-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";
-	filter: alpha(opacity=100);
 	opacity: 1;
-}
-
-.cm-matchhighlight {
-	background-color: rgba(0, 255, 0, .15)
 }
 
 .disabled {
@@ -1115,7 +1098,6 @@ input[readonly] {
 
 .field-color-preview {
 	color-adjust: exact;
-	-webkit-color-adjust: exact;
 	margin: 6px;
 	height: 24px;
 	width: 116px;
