--- a/www/css/style.css
+++ b/www/css/style.css
@@ -1298,6 +1298,10 @@ input[readonly] {
 
 }
 
+.form-modal-container-node-20 {
+	max-width: 550px !important;
+}
+
 .shake {
 	animation: shake-animation linear 0.3s;
 	animation-iteration-count: 2;
