--- a/www/css/style.css
+++ b/www/css/style.css
@@ -1215,6 +1215,16 @@ input[readonly] {
 	opacity: 0.5;
 }
 
+.fields-splitter {
+	font-size: 70%;
+	color: var(--BRAND_COLOR_SHINE);
+	margin-top: 30px;
+	background: var(--BRAND_COLOR);
+	padding: 10px 0 10px 27%;
+	border-top-left-radius: 10px;
+	border-top-right-radius: 10px;
+}
+
 .form-tab-highlight {
 	margin-bottom: 10px;
 	border: 2px solid #944;
