--- a/www/css/style.css
+++ b/www/css/style.css
@@ -702,13 +702,13 @@ input[readonly] {
 	margin: 0;
 }
 
-.field-wrap-inline {
+.form-full .field-wrap-inline {
 	display: inline-block;
 	margin-right: 40px;
 	min-width: 70px;
 }
 
-.field-wrap-inline .field-boolean {
+.form-full .field-wrap-inline .field-boolean {
 	display: inline-block;
 }
 
@@ -781,15 +781,10 @@ input[readonly] {
 }
 
 .field-wrap-alert {
+	display: inline-block;
 	background: #fee;
-	border-top: 2px solid #a33;
 	color: #700;
-	font-size: 70%;
-	padding: 3px;
-	margin-top: 2px;
-	margin-bottom: -16px;
-	position: absolute;
-	margin-top: 27px;
+	margin-left: 5px;
 }
 
 .field-wrap-alert-success {
@@ -1181,7 +1176,8 @@ input[readonly] {
 }
 
 .form .header-tabs {
-	margin: 20px 0 20px 0;
+	margin: 20px -20px 0 -20px;
+	padding-left: 20px;
 	border-bottom: 1px solid #ccc;
 }
 
@@ -1234,6 +1230,7 @@ input[readonly] {
 .field-container-type-22 {
 	margin-top: 30px;
 	margin-left: -20px;
+	margin-right: -20px;
 	background: var(--BRAND_COLOR);
 	padding: 5px;
 	padding-left: 20px;
