--- a/www/css/style.css
+++ b/www/css/style.css
@@ -763,9 +763,12 @@ input[readonly] {
 	color: #707072;
 }
 
-.field-wrap-help-open {
+.field-wrap-help-body {
+	position: fixed;
 	z-index: 2;
 	width: 300px;
+	margin-left: -150px;
+	margin-top: -50px;
 	background: #707072;
 	color: #f0f0f2;
 	padding: 10px;
@@ -1153,6 +1156,7 @@ input[readonly] {
 	margin: 30px auto;
 	padding: 30px;
 	overflow-y: auto;
+	overflow-x: clip;
 	max-height: calc(100% - 120px);
 	background-color: white;
 	border: 1px solid var(--BRAND_COLOR_LIGHT);
