pre release fixes

--- a/www/css/debug-style.css
+++ b/www/css/debug-style.css
@@ -292,10 +292,7 @@
 	bottom: 32px;
 }
 
-.form-node-9 .field-container-id-752,
-.form-node-12 .field-container-id-755,
-.form-node-4 .field-container-id-13,
-.form-node-6 .field-container-id-754 {
+.form-item-row-num .field-container-name-id {
 	color: #ccc;
 	font-size: 80%;
 }
