--- a/www/client-core/css/style.css
+++ b/www/client-core/css/style.css
@@ -85,7 +85,7 @@ button {
 	margin: 3px;
 	padding: 4px 15px;
 	border: 0;
-	border-radius: 4px;
+	border-radius: 64px;
 	outline: none !important;
 }
 
@@ -216,7 +216,6 @@ img {
 
 .tool-btn {
 	padding: 3px 2px;
-	border-radius: 3px;
 	box-shadow: none;
 }
 
@@ -572,7 +571,13 @@ input[readonly] {
 }
 
 .top-bar-user-container {
+	display: flex;
+	align-items: center;
 	margin-right: 10px;
+}
+
+.top-bar-user-container .select-control-wrapper {
+	flex-shrink: 100;
 }
 
 .top-bar-user-org-select {
