--- a/www/client-core/css/style.css
+++ b/www/client-core/css/style.css
@@ -94,9 +94,9 @@ input {
 	vertical-align: middle;
 	width: 100%;
 	border: 1px solid #a8a8a8;
-	border-radius: 4px;
-	padding: 0 8px;
-	height: 34px;
+	border-radius: 20px;
+	padding: 0 14px;
+	height: 37px;
 	font-size: 28px;
 	line-height: 34px;
 	font: inherit;
@@ -145,9 +145,13 @@ img {
 	vertical-align: middle;
 }
 
-.field-wrap-disabled .field-boolean,
+.field-wrap-disabled .field-boolean {
+	opacity: 0.5;
+	pointer-events: none;
+}
+
 .restricted {
-	opacity: 0.3;
+	opacity: 0;
 	pointer-events: none;
 }
 
@@ -756,6 +760,7 @@ input[readonly] {
 }
 
 .field-wrap-label {
+	padding-left: 13px;
 	font-size: 80%;
 	font-weight: bold;
 	color: var(--BRAND_COLOR);
@@ -861,11 +866,11 @@ input[readonly] {
 
 .select-control {
 	position: relative;
-	padding: 8px;
+	padding: 8px 14px;
 	color: #333;
 	min-width: 130px;
 	border: 1px solid #a8a8a8;
-	border-radius: 4px;
+	border-radius: 30px;
 }
 
 .select-control-list {
@@ -1014,7 +1019,7 @@ input[readonly] {
 	justify-content: space-between;
 	border: 1px solid #a8a8a8;
 	white-space: nowrap;
-	border-radius: 3px;
+	border-radius: 30px;
 	padding: 5px 8px;
 	width: 100%;
 }
@@ -1139,7 +1144,6 @@ input[readonly] {
 }
 
 .field-color-preview {
-	color-adjust: exact;
 	margin: 6px;
 	height: 24px;
 	width: 116px;
@@ -1219,12 +1223,12 @@ input[readonly] {
 .tab-header-button {
 	position: relative;
 	display: inline-block;
-	padding: 10px 24px 10px 12px;
+	padding: 10px 30px;
 	margin-right: 2px;
 	border: 1px solid #ccc;
 	border-bottom: none;
-	border-top-left-radius: 10px;
-	border-top-right-radius: 20px 40px;
+	border-top-left-radius: 40px;
+	border-top-right-radius: 40px;
 	overflow: hidden;
 }
 
@@ -1266,15 +1270,19 @@ input[readonly] {
 	margin-top: 30px;
 	margin-left: -20px;
 	margin-right: -20px;
-	background: var(--BRAND_COLOR);
 	padding: 5px;
 	padding-left: 20px;
-	border-radius: 10px;
+	border-radius: 50px;
+}
+
+.form-container-node-4 .delete-button {
+	display: none;
 }
 
 
 .field-container-type-22 .field-wrap-label {
-	color: var(--BRAND_COLOR_SHINE);
+	font-size: 130%;
+	color: var(--BRAND_COLOR_HEADER);
 }
 
 .form-tab-highlight {
