--- a/www/client-core/css/style.css
+++ b/www/client-core/css/style.css
@@ -1338,23 +1338,28 @@ input[readonly] {
 
 .list-search {
 	position: relative;
-	display: inline-block;
+	display: inline-flex;
 	border: 1px solid #a8a8a8;
-	border-radius: 6px;
+	border-radius: 20px;
+	align-items: center;
 }
 
 .list-search .tool-btn {
-	display: inline-block;
-	height: 100%;
+	display: flex;
+	height: 32px;
+	align-items: center;
+	border-top-right-radius: 20px;
+	border-bottom-right-radius: 20px;
 }
 
 .list-search-input {
 	width: calc(100% - 31px);
 	border-radius: 6px;
 	vertical-align: middle;
-	padding: 2px 8px;
+	padding: 2px 12px;
 	border: none;
 	border-right: 1px solid #a8a8a8;
+	border-radius: 20px;
 	border-top-right-radius: 0;
 	border-bottom-right-radius: 0;
 }
