--- a/www/client-core/css/consts.css
+++ b/www/client-core/css/consts.css
@@ -1,13 +1,18 @@
 :root {
-	--BRAND_COLOR: #678;
-	--BRAND_COLOR_HEADER: #678;
-	--BRAND_COLOR_SHADOW: #456;
-	--BRAND_COLOR_DARK: #345;
-	--BRAND_COLOR_LIGHT: #89a;
-	--BRAND_COLOR_SHINE: #def;
-	--TEXT_COLOR: #303539;
+	--BG_COLOR: #291f1b;
+	--INPUT_COLOR: #1d1515;
+	--TEXT_COLOR: #e7ded0;
 
-	--CREATE_COLOR: #3b8;
+	--BRAND_COLOR: #583d18;
+	--BRAND_COLOR_LIGHT: #7e6617;
+	--BRAND_COLOR_HEADER: #ce8116;
+
+
+	--BRAND_COLOR_SHADOW: #456;
+	--BRAND_COLOR_DARK: #3a2314;
+	--BRAND_COLOR_SHINE: #c5ac3e;
+
+	--CREATE_COLOR: rgb(13, 104, 70);
 	--DELETE_COLOR: #b55;
 	--EDIT_COLOR: #37b;
 	--PUBLISH_COLOR: #f84c4c;
