--- a/www/client-core/css/debug-style.css
+++ b/www/client-core/css/debug-style.css
@@ -126,11 +126,10 @@
 	display: inline-block;
 	vertical-align: top;
 	margin-top: -5px;
-	color: rgb(61, 61, 61);
-	padding: 10px;
-	border-radius: 5px;
-	background: rgb(212, 212, 212);
-	border: 1px solid rgb(156, 156, 156);
+	color: rgb(218, 218, 218);
+	padding: 25px;
+	border-radius: 50px;
+	background: rgb(83, 50, 50);
 }
 
 .admin-control-field .admin-form-body {
@@ -144,8 +143,8 @@
 	top: 8px;
 	left: -20px;
 	vertical-align: top;
-	border-radius: 5px;
-	color: #00000040;
+	border-radius: 50px;
+	color: #d6000099;
 }
 
 .admin-field-open-btn {
@@ -155,8 +154,8 @@
 	top: 8px;
 	left: -0;
 	vertical-align: top;
-	border-radius: 5px;
-	color: #00000040;
+	border-radius: 50px;
+	color: #d6000099;
 }
 
 .admin-button-highlighted {
@@ -178,8 +177,10 @@
 }
 
 .admin-form-lock-btn {
+	border-radius: 10px;
 	position: absolute;
-	right: 5px;
+	padding: 5px;
+	right: 10px;
 	top: 5px;
 }
 
@@ -194,8 +195,7 @@
 .admin-form-btn {
 	background: rgb(114, 114, 114);
 	color: rgb(255, 255, 255);
-	padding-left: 6px;
-	padding-right: 6px;
+	padding: 6px 15px;
 }
 
 .admin-form-all-fields .admin-control-field .admin-form-open-btn {
@@ -213,15 +213,13 @@
 
 .debug-panel-panel {
 	position: fixed;
-	top: 130px;
-	right: 0;
-	background: rgb(165, 165, 165);
-	border: 2px solid #fff;
-	border-top-left-radius: 10px;
-	border-bottom-left-radius: 10px;
-	border-right: 0;
-	padding: 10px;
-	color: #fff;
+	top: 0;
+	right: 330px;
+	background: rgb(145, 125, 112);
+	border-bottom-right-radius: 80px;
+	border-bottom-left-radius: 80px;
+	padding: 20px;
+	color: #e7e3d4;
 	z-index: 15;
 	font-size: 75%;
 	max-width: 70vw;
